Add sync from api paths of policies and dynamic-configs to the temporary one
This change adds a watcher for changes to policies and dynamic-configs paths in etcd and notifies those those changes to notifier that will handle them
