# docs/content/assets/openapiv2/aperture-controller.swagger.yaml
@@ -26,7 +26,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/PostPoliciesResponse'
+            $ref: '#/definitions/PostResponse'
         default:
           description: An unexpected error response.
           schema:
@@ -105,7 +105,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/PostPoliciesResponse'
+            $ref: '#/definitions/PostResponse'
         default:
           description: An unexpected error response.
           schema:
@@ -125,7 +125,7 @@ paths:
         "200":
           description: A successful response.
           schema:
-            $ref: '#/definitions/PostPoliciesResponse'
+            $ref: '#/definitions/PostResponse'
         default:
           description: An unexpected error response.
           schema:
@@ -2844,7 +2844,7 @@ definitions:
       policy:
         x-go-tag-validate: required
         $ref: '#/definitions/Policy'
-  PostPoliciesResponse:
+  PostResponse:
     type: object
     properties:
       errors:
